// Use DBML to define your database structure
// open: https://dbdiagram.io/d
// Source of truth: backend JPA entities (pushed to Neon DB via Hibernate)

Table app_user {
  id uuid [pk, not null]
  email varchar(100) [unique, not null]
  username varchar(50) [unique, not null]
  password varchar(255) [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table diary_entry {
  id uuid [pk, not null]
  user_id uuid [not null]
  created_at timestamptz [not null]
  entry_date date [not null]

  stress_level integer
  sleep integer
  mental_strain integer

  contact_shower boolean
  contact_shower_notes varchar(255)
  contact_clothing boolean
  contact_clothing_notes varchar(255)
  contact_animal boolean
  contact_animal_notes varchar(255)

  nutrition_nuts boolean
  nutrition_nuts_notes varchar(255)
  nutrition_fruits boolean
  nutrition_fruits_notes varchar(255)
  nutrition_shellfish boolean
  nutrition_shellfish_notes varchar(255)
  nutrition_dairy boolean
  nutrition_dairy_notes varchar(255)
  nutrition_gluten boolean
  nutrition_gluten_notes varchar(255)

  care_skin_care boolean
  care_skin_care_notes varchar(255)
  care_hair_products boolean
  care_hair_products_notes varchar(255)
  care_soapshampoo boolean
  care_soapshampoo_notes varchar(255)
  care_cosmetics boolean
  care_cosmetics_notes varchar(255)

  health_other_allergies boolean
  health_other_allergies_notes varchar(255)
  health_infections boolean
  health_infections_notes varchar(255)

  symptom_itchiness integer
  symptom_scratch boolean
  symptom_inflammation integer
  symptom_dryness integer
  symptom_weeping_skin boolean
  symptom_skin_cracks boolean

  notes text

  indexes {
    (user_id, entry_date) [unique, name: 'uk_diary_entry_user_entry_date']
  }
}

Table diary_entry_custom_contact {
  diary_entry_id uuid [not null]
  factor varchar(255)
}

Table diary_entry_custom_nutrition {
  diary_entry_id uuid [not null]
  factor varchar(255)
}

Table diary_entry_custom_care {
  diary_entry_id uuid [not null]
  product varchar(255)
}

Table diary_entry_spread_photo {
  diary_entry_id uuid [not null]
  photo_url text
}

Table refresh_token {
  id uuid [pk, not null]
  user_id uuid [not null]
  token text [not null, unique]
  expires_at timestamptz [not null]
  created_at timestamptz [not null]
  revoked boolean [not null]
}

Ref: diary_entry.user_id > app_user.id
Ref: diary_entry_custom_contact.diary_entry_id > diary_entry.id
Ref: diary_entry_custom_nutrition.diary_entry_id > diary_entry.id
Ref: diary_entry_custom_care.diary_entry_id > diary_entry.id
Ref: diary_entry_spread_photo.diary_entry_id > diary_entry.id
Ref: refresh_token.user_id > app_user.id
